--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@ if (markerFound == 1) {
 </a-assets>
 <!-- END: Unity Compiled Assets -->
 <!-- BEGIN: Add Image Target (marker) -->
-<a-marker id="marker" type="pattern" preset="custom" src="pattern-targett.patt" url="pattern-targett.patt" emitevents="true" button>
+<a-marker id="marker" preset="hiro" emitevents="true" button>
 <!-- END: Add Image Target (marker) -->
 
 <!-- BEGIN: Unity Compiled Objects -->
-<a-video width="1" height="1" src="#Video_Asset_0" class="intersectable" position="0 0.01 0" rotation="270 0 0" color="#FFFFFF" 
+<a-video width="1" height="1" src="#Video_Asset_0" class="intersectable" position="0 0.006 0" rotation="270.3363 -180 -180" color="#FFFFFF" 
 ></a-video>
 <!-- END: Unity Compiled Objects -->
 
